Fix last.fm auth failure introduced by ec210e0cf3119818a1d359885b77f6ef21a86cea

BUG: 253788
CCMAIL: kretschmann@kde.org