src/services/lastfm/LastFmServiceSettings.cpp
@@ -14,6 +14,8 @@
  * this program.  If not, see <http://www.gnu.org/licenses/>.                           *
  ****************************************************************************************/
 
+#define DEBUG_PREFIX "LastFmServiceSettings"
+
 #include "LastFmServiceSettings.h"
 
 #include "core/support/Amarok.h"
@@ -112,8 +114,8 @@ LastFmServiceSettings::testLogin()
 
     debug() << "username:" << QString( QUrl::toPercentEncoding( lastfm::ws::Username ) );
 
-    const QString authToken = QString( md5( m_configDialog->kcfg_ScrobblerUsername->text().toUtf8() ) +
-                                       md5( m_configDialog->kcfg_ScrobblerPassword->text().toUtf8() ) );
+    const QString authToken = md5( ( m_configDialog->kcfg_ScrobblerUsername->text() +
+                                     md5( m_configDialog->kcfg_ScrobblerPassword->text().toUtf8() ) ).toUtf8() );
 
     // now authenticate w/ last.fm and get our session key
     QMap<QString, QString> query;
